fix broken layouts and update cta styling

--- a/app/assets/stylesheets/works/components/ctas.scss
+++ b/app/assets/stylesheets/works/components/ctas.scss
@@ -10,7 +10,8 @@
   position: relative;
 
   button {
-    font-size: 1.5em;
+    font-size: 1.1em;
+    font-weight: 400;
     // height: 40px;
   }
 
@@ -18,27 +19,28 @@
     margin: auto;
   }
 
-  .cta-item {
+  .cta-content {
     height: 30px;
-    margin-top: 8px;
+    // margin-top: 8px;
 
     span {
-      height: 100%;
+      height: 20px;
+      // height: 100%;
       padding-top: 3px;
       display: inline-block;
-      vertical-align: middle;
+      // vertical-align: middle;
     }
 
-    button {
-      height: 100%;
-    }
+    // button {
+    //   height: 100%;
+    // }
 
     // * {
     //   margin: auto;
     // }
   }
 
-  .work-header-cta-item {
+  .work-cta-item {
     background-color: #333;
     border-radius: 5px;
     color: white;
